dropzone overflow fixed

--- a/css/dropzones.css
+++ b/css/dropzones.css
@@ -1,19 +1,24 @@
 .dropzone__wrapper {
-    width: fit-content;
     height: 100%;
 
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 8px;
+
+    min-width: 0
 }
 
 .dropzone__wrapper > p {
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .dropzone {
     width: 130px;
+    min-width: 130px;
     height: 30px;
     position: relative;
 
