--- a/css/switches.css
+++ b/css/switches.css
@@ -2,6 +2,8 @@
     margin-right: 16px;
     font-size: 20px;
     font-weight: bold;
+
+    white-space: nowrap;
 }
 
 .switch-violet {
@@ -14,6 +16,7 @@
 .switch {
     position: relative;
     width: 60px;
+    min-width: 60px;
     height: 30px;
 }
 
@@ -22,6 +25,8 @@
 }
 
 .switch label {
+    min-width: fit-content;
+
     position: absolute;
     cursor: pointer;
     top: 0;
